--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,17 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/gameimage"
+        android:src="@drawable/lake"
         android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="48sp"
-        android:text="@string/app_name"
+        android:text="Arcade Pong"
         android:layout_above="@+id/play"
         android:layout_below="@+id/HighScoreText"
-        android:textColor="@color/white"
+        android:textColor="@color/green"
         android:layout_centerHorizontal="true"/>
 
     <TextView
@@ -28,7 +28,7 @@
         android:text="play"
         android:textSize="64sp"
         android:layout_centerInParent="true"
-        android:textColor="@color/black"
+        android:textColor="#FF9800"
         android:id="@+id/play"/>
 
     <TextView
