--- a/app/src/main/res/layout/acitivity_main_screen.xml
+++ b/app/src/main/res/layout/acitivity_main_screen.xml
@@ -4,16 +4,22 @@
     android:layout_height="match_parent"
 
     android:background="@drawable/gameimage"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal">
 
 
         <Button
             android:id="@+id/playBtn"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="150dp"
             android:src="@drawable/ball" />
-
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gif"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/deliveryman"/>
 
 </LinearLayout>
