--- a/app/src/main/res/layout/acitivity_main_screen.xml
+++ b/app/src/main/res/layout/acitivity_main_screen.xml
@@ -18,7 +18,9 @@
             android:id="@+id/startGif"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@android:style/Animation"
-            android:src="@drawable/start"/>
+            style="@android:style/Animation">
+
+        </pl.droidsonroids.gif.GifImageView>
+
 
 </RelativeLayout>
