--- a/app/src/main/res/layout/acitivity_main_screen.xml
+++ b/app/src/main/res/layout/acitivity_main_screen.xml
@@ -18,7 +18,8 @@
             android:id="@+id/startGif"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@android:style/Animation">
+            style="@android:style/Animation"
+            android:src="@drawable/start">
 
         </pl.droidsonroids.gif.GifImageView>
 
