--- a/app/src/main/res/layout/levels_screen.xml
+++ b/app/src/main/res/layout/levels_screen.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spacel"
-    android:visibility="visible">
+    android:background="@drawable/purple"
+    android:orientation="vertical"
+>
 
-    <Button
-        android:id="@+id/startBtn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetBottom="10dp"
-        android:src="@drawable/thumbnail" />
-    <Button
-        android:id="@+id/lev1Btn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetBottom="10dp"
-        android:src="@drawable/thumbnail" />
-    <Button
-        android:id="@+id/lev2Btn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetBottom="10dp"
-        android:src="@drawable/thumbnail" />
-    <Button
-        android:id="@+id/lev3Btn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetBottom="10dp"
-        android:src="@drawable/thumbnail" />
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="200dp"
+            android:orientation="vertical"
+            android:weightSum="3">
+
+            <ImageButton
+                android:id="@+id/Button1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/btn1" />
+
+            <ImageButton
+                android:id="@+id/Button2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/btn2" />
+
+            <ImageButton
+                android:id="@+id/Button3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/btn1" />
+
+
+
+        </LinearLayout>
+
 
 </RelativeLayout>
 
