--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@drawable/gameimage"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/gameimage">
 
 
-    <EditText
-        android:id="@+id/Name_input"
-        android:layout_width="216dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/black"
-        android:hint="Please enter your name"
-        android:textColor="@color/teal_700"
-        android:textColorHint="@color/white" />
-
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_marginStart="10dp"
-        android:backgroundTint="@color/white"
-        android:text="ADD"
-        android:textColor="@color/black"
-        android:id="@+id/Add"/>
+ <EditText
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:hint="Please enter your name"
+     android:layout_gravity="center"
+     android:id="@+id/Name_input"
+     />
+     <Button
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Submit"
+         android:layout_marginStart="10dp"
+         android:layout_gravity="center"
+         android:background="@drawable/buttons"
+         android:onClick="tapToAnimate"
+         android:id="@+id/Add"
+         />
     <TextView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:textColor="@color/black"
-        android:id="@+id/tv_score">
-    </TextView>
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textColor="@color/black"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play again"
+        android:layout_marginStart="10dp"
+        android:layout_gravity="center"
+        android:background="@drawable/buttons"
+        android:onClick="tapToAnimate"
+        android:id="@+id/playAgainbtn"
+        />
 
 </LinearLayout>
+
