--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -9,14 +9,14 @@
  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     android:hint="Please enter your name"
+     android:hint="@string/name_hint"
      android:layout_gravity="center"
      android:id="@+id/Name_input"
      />
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="Submit"
+         android:text="@string/submit_btn"
          android:layout_marginStart="10dp"
          android:layout_gravity="center"
          android:background="@drawable/buttons"
@@ -34,7 +34,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play again"
+        android:text="@string/play_again"
         android:layout_marginStart="10dp"
         android:layout_gravity="center"
         android:background="@drawable/buttons"
