--- a/app/src/main/res/layout/levels_screen.xml
+++ b/app/src/main/res/layout/levels_screen.xml
@@ -21,6 +21,8 @@
         android:orientation="horizontal"
         android:weightSum="2">
 
+
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -32,22 +34,25 @@
                 android:id="@+id/Button1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+
+                android:layout_margin="20dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn1" />
-            <ImageButton
-                android:id="@+id/Button2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn1" />
+                android:background="@drawable/ic_baseline_looks_one_24" />
             <ImageButton
                 android:id="@+id/Button3"
                 android:layout_width="match_parent"
+                android:layout_margin="20dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn1" />
+                android:background="@drawable/ic_baseline_looks_3_24" />
+            <ImageButton
+                android:id="@+id/Button5"
+                android:layout_width="match_parent"
+                android:layout_margin="20dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_baseline_looks_5_24" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -56,23 +61,26 @@
             android:weightSum="3">
 
             <ImageButton
+                android:id="@+id/Button2"
+                android:layout_width="match_parent"
+                android:layout_margin="20dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_baseline_looks_two_24" />
+            <ImageButton
                 android:id="@+id/Button4"
                 android:layout_width="match_parent"
+                android:layout_margin="20dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn2" />
-            <ImageButton
-                android:id="@+id/Button5"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn2" />
+                android:background="@drawable/ic_baseline_looks_4_24"/>
             <ImageButton
                 android:id="@+id/Button6"
                 android:layout_width="match_parent"
+                android:layout_margin="20dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn1" />
+                android:background="@drawable/ic_baseline_looks_6_24" />
         </LinearLayout>
     </LinearLayout>
 
