--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gameimage">
+    android:background="@drawable/purple">
 
 
  <EditText
@@ -11,6 +11,10 @@
      android:layout_height="wrap_content"
      android:hint="@string/name_hint"
      android:layout_gravity="center"
+     android:fontFeatureSettings="@string/name_hint"
+     android:textColor="@color/white"
+     android:textStyle="bold"
+     android:textColorHint="@color/white"
      android:id="@+id/Name_input"
      />
      <Button
@@ -29,8 +33,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:gravity="center"
+        android:textSize="40sp"
         android:layout_gravity="center"
-        android:textColor="@color/black"/>
+        android:textStyle="bold"
+        android:textColor="@color/white"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,6 +47,22 @@
         android:onClick="tapToAnimate"
         android:id="@+id/playAgainbtn"
         />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_gravity="bottom"
+
+    >
+    <Button
+        android:id="@+id/Exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@drawable/buttons"
+        android:onClick="tapToAnimate"
+        android:text="@string/exit_btn" />
+    </LinearLayout>
 
 </LinearLayout>
 
