--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -21,7 +21,6 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/submit_btn"
-         android:layout_marginStart="10dp"
          android:layout_gravity="center"
          android:background="@drawable/buttons"
          android:onClick="tapToAnimate"
@@ -51,9 +50,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_gravity="bottom"
-
-    >
+    android:layout_gravity="bottom">
     <Button
         android:id="@+id/Exit"
         android:layout_width="wrap_content"
